Adjust for deprecations introduced in jdk20